--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
     "scripts": {
+        "test": "npx mocha -p -r ts-node/register 'tests/reinforcedConcrete.test.js'",
+        "build": "./scripts/build-circuits.sh reinforcedConcrete"
     },
     "dependencies": {
         "circomlib": "^2.0.5"
@@ -7,6 +9,10 @@
     "devDependencies": {
         "@types/mocha": "^10.0.1",
         "@types/node": "^18.14.6",
+        "chai": "^4.3.10",
+        "circom_tester": "^0.0.20",
+        "ffjavascript": "^0.2.62",
+        "mocha": "^10.2.0",
         "snarkjs": "^0.7.0",
         "ts-mocha": "^10.0.0",
         "typescript": "^4.9.5"
