--- a/rc-circom/package.json
+++ b/rc-circom/package.json
@@ -1,4 +1,6 @@
 {
+    "name": "reinforced-concrete-circom",
+    "version": "1.0.0",
     "scripts": {
         "test": "npx mocha -p -r ts-node/register 'tests/reinforcedConcrete.test.js'",
         "build": "./scripts/build-circuits.sh reinforcedConcrete"
