--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "reinforced-concrete-sol/lib/forge-std"]
-	path = reinforced-concrete-sol/lib/forge-std
+[submodule "rc-sol/lib/forge-std"]
+	path = rc-sol/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
