fix: cleanup submodule, update test

--- a/rc-circom/package.json
+++ b/rc-circom/package.json
@@ -2,8 +2,7 @@
     "name": "reinforced-concrete-circom",
     "version": "1.0.0",
     "scripts": {
-        "test": "npx mocha -p -r ts-node/register 'tests/reinforcedConcrete.test.js'",
-        "build": "./scripts/build-circuits.sh reinforcedConcrete"
+        "test": "npx mocha -p -r ts-node/register 'tests/reinforcedConcrete.test.js'"
     },
     "dependencies": {
         "circomlib": "^2.0.5"
